--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         <!-- card-1 -->
                         <div class="flex bg-white rounded-xl items-center">
                             <!-- img -->
-                            <img class="md:p-4" src="./images/onion.png" alt="Product" />
+                            <img class="md:p-4" src="../Assignment 4/images/onion.png" alt="Product" />
                             <!-- content -->
                             <div class="md:p-4">
                                 <i class="fa-solid fa-star text-[#FFC107]"> <span class="text-dark-2">4.5</span></i>
