grid pic updated

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         <!-- card-2 -->
                         <div class="flex bg-white rounded-xl items-center">
                             <!-- img -->
-                            <img class="md:p-4" src="./images/Tomato.png" alt="Product" />
+                            <img class="md:p-4" src="../Assignment 4/images/tomato.png" alt="Product" />
                             <!-- content -->
                             <div class="md:p-4">
                                 <i class="fa-solid fa-star text-[#FFC107]"> <span class="text-dark-2">4.5</span></i>
@@ -168,7 +168,7 @@
                         <!-- card-3 -->
                         <div class="flex bg-white rounded-xl items-center">
                             <!-- img -->
-                            <img class="md:p-4" src="./images/Potato.png" alt="Product" />
+                            <img class="md:p-4" src="../Assignment 4/images/potato.png" alt="Product" />
                             <!-- content -->
                             <div class="md:p-4">
                                 <i class="fa-solid fa-star text-[#FFC107]"> <span class="text-dark-2">4.5</span></i>
@@ -179,7 +179,7 @@
                         <!-- card-4 -->
                         <div class="flex bg-white rounded-xl items-center">
                             <!-- img -->
-                            <img class="md:p-4" src="./images/Tomato.png" alt="Product" />
+                            <img class="md:p-4" src="../Assignment 4/images/tomato.png" alt="Product" />
                             <!-- content -->
                             <div class="md:p-4">
                                 <i class="fa-solid fa-star text-[#FFC107]"> <span class="text-dark-2">4.5</span></i>
@@ -190,7 +190,7 @@
                         <!-- card-5 -->
                         <div class="flex bg-white rounded-xl items-center">
                             <!-- img -->
-                            <img class="md:p-4" src="./images/Potato.png" alt="Product" />
+                            <img class="md:p-4" src="../Assignment 4/images/potato.png" alt="Product" />
                             <!-- content -->
                             <div class="md:p-4">
                                 <i class="fa-solid fa-star text-[#FFC107]"> <span class="text-dark-2">4.5</span></i>
@@ -201,7 +201,7 @@
                         <!-- card-6 -->
                         <div class="flex bg-white rounded-xl items-center">
                             <!-- img -->
-                            <img class="md:p-4" src="./images/Onion.png" alt="Product" />
+                            <img class="md:p-4" src="../Assignment 4/images/onion.png" alt="Product" />
                             <!-- content -->
                             <div class="md:p-4">
                                 <i class="fa-solid fa-star text-[#FFC107]"> <span class="text-dark-2">4.5</span></i>
@@ -212,7 +212,7 @@
                         <!-- card 7 -->
                         <div class="flex bg-white rounded-xl items-center">
                             <!-- img -->
-                            <img class="md:p-4" src="./images/Potato.png" alt="Product" />
+                            <img class="md:p-4" src="../Assignment 4/images/potato.png" alt="Product" />
                             <!-- content -->
                             <div class="md:p-4">
                                 <i class="fa-solid fa-star text-[#FFC107]"> <span class="text-dark-2">4.5</span></i>
@@ -223,7 +223,7 @@
                         <!-- card 8 -->
                         <div class="flex bg-white rounded-xl items-center">
                             <!-- img -->
-                            <img class="md:p-4" src="./images/Onion.png" alt="Product" />
+                            <img class="md:p-4" src="../Assignment 4/images/onion.png" alt="Product" />
                             <!-- content -->
                             <div class="md:p-4">
                                 <i class="fa-solid fa-star text-[#FFC107]"> <span class="text-dark-2">4.5</span></i>
@@ -234,7 +234,7 @@
                         <!-- card 9 -->
                         <div class=" hidden lg:flex bg-white rounded-xl items-center">
                             <!-- img -->
-                            <img class="md:p-4" src="./images/Tomato.png" alt="Product" />
+                            <img class="md:p-4" src="../Assignment 4/images/tomato.png" alt="Product" />
                             <!-- content -->
                             <div class="md:p-4">
                                 <i class="fa-solid fa-star text-[#FFC107]"> <span class="text-dark-2">4.5</span></i>
